features/template07.yml
Parameters:
  NameOfService:
    Description: "The name of the service this stack is to be used for"
    Type: String
  KeyName:
    Description: "Name of an existing EC2 KeyPair"
    Type: AWS::EC2::KeyPair::KeyName

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-03a6eaae9938c858c

Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum: 
              httpd: []
              php: []
            files: 
              /var/www/html/index.php: 
                content: !Sub |
                  <?php print "Hello world"; ?>
            services: 
              sysvinit:
                httpd:
                  enabled: true
                  ensureRunning: true
    Properties:
      ImageId: !FindInMap 
        - RegionMap
        - !Ref AWS::Region
        - AMI
      InstanceType: t2.micro
      Tags:
        - Key: "Name"
          Value: !Ref NameOfService
      KeyName: !Ref KeyName
      SecurityGroupIds: 
        - !Ref MySecurityGroup
      UserData: 
        'Fn::Base64': 
          !Sub |
            #!/bin/bash -xe
            # Ensure AWS CFN Bootstrap in the latest
            yum install -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2Instance --region ${AWS::Region}
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access 
      VpcId: #Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

Outputs:
  ServerDns:
    Value: !GetAtt 
      - Ec2Instance
      - PublicDnsName
